update core pom file with aspectj dependency